# unblock-build

./: .gitignore  LICENSE  README.md  README_init.md
.github/workflows/: build-macos.yml
Mac/: README.md  build.sh  build.spec  gui.py  pyproject.toml  requirements.txt
Mac/proxy/: tg_ws_proxy.py
